Fixed bug #52681 (mb_send_mail() appends an extra MIME-Version header).